--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -19,7 +19,7 @@
         <div class="mb-3">
           <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn-create btn btn-primary w-100">Login</button>
+        <button type="button" class="btn-create btn btn-primary w-100" [routerLink]="['/home']">Login</button>
         <div class="mt-3 text-center">
           Don't have an account? <a class="text-primary" href="/signup">Sign up</a>
         </div>
