--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,26 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg custom-navbar px-4 py-2">
+  <div class="container-fluid">
+    <!-- Logo -->
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="assets/images/logo.png" alt="Logo" class="logo-img" />
+    </a>
+
+    <!-- Navigation Links -->
+    <div class="collapse navbar-collapse justify-content-center">
+      <ul class="navbar-nav gap-2">
+        <li class="nav-item"><a class="nav-link active rounded-pill" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Learning zone</a></li>
+        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Storytime</a></li>
+        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Playground</a></li>
+        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Shop</a></li>
+        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Characters</a></li>
+      </ul>
+    </div>
+
+    <!-- Right Side (Search + Avatar) -->
+    <div class="d-flex align-items-center gap-3">
+      <i class="bi bi-search fs-5"></i>
+      <img src="assets/images/avatar.png" alt="User Avatar" class="avatar-img" />
+    </div>
+  </div>
+</nav>
