--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="assets/images/logo.png" alt="Logo" class="logo-img" />
+      <img src="images\logo-patarif.png" alt="Logo" class="logo-img w-50" />
     </a>
 
     <!-- Navigation Links -->
@@ -20,7 +20,7 @@
     <!-- Right Side (Search + Avatar) -->
     <div class="d-flex align-items-center gap-3">
       <i class="bi bi-search fs-5"></i>
-      <img src="assets/images/avatar.png" alt="User Avatar" class="avatar-img" />
+      <img src="images/user-img.png" alt="User Avatar" class="avatar-img" />
     </div>
   </div>
 </nav>
