--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,1 +1,46 @@
+<!-- main background -->
+<div class="w-100 h-100" style="height: 100vh; z-index: 0; pointer-events: none;">
+    <!-- circles -->
+    <div class="circle " style="top: 18px; left: 2px; background-color: rgba(100, 134, 255, 1);">
+    </div>
 
+    <div class="circle" style="top: 540px; left: 140px; background-color: rgba(251, 86, 100, 1);">
+    </div>
+
+    <div class="circle" style="top: 205px; left: 564px; background-color: rgba(155, 87, 250, 1);">
+    </div>
+
+    <div class="circle" style="top: 450px; right: 0px; background-color: rgba(255, 0, 110, 1);">
+    </div>
+
+    <div class="circle" style="top: -138px; right: 60px; background-color: rgba(255, 238, 82, 1);">
+    </div>
+
+    <div class="circle" style="top: 920px; right: 560px; background-color: rgba(100, 134, 255, 1);">
+    </div>
+
+    <div class="circle" style="top: 1330px; left: 1004px; background-color: rgba(255, 238, 82, 1);">
+    </div>
+
+    <div class="circle" style="top: 1500px; left: 0; background-color: rgba(100, 134, 255, 1);">
+    </div>
+
+    <div class="circle" style="top: 1680px; left: 564px; background-color: rgba(155, 87, 250, 1);">
+    </div>
+
+    <div class="circle" style="top: 2015px; left: 140px; background-color: rgba(251, 86, 100, 1);">
+    </div>
+
+    <!-- glassmorphism background above circles -->
+    <div class="home-container position-fixed w-100 h-100">
+    </div>
+</div>
+
+<div style="position: relative; z-index: 10; padding-top: 80px; ">
+    <div class="animate__animated animate__fadeInDown">
+        <app-hero-section></app-hero-section>
+    </div>
+    <br>
+    <br>
+    <app-introduction></app-introduction>
+</div>
