--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -1,5 +1,5 @@
 <div class="hero">
-    <!-- <div class="paper-plane"><img src="images/paperPlane.png" alt="paper-plane"></div> -->
+    <div class="paper-plane"><img src="images/paperPlane.png" alt="paper-plane"></div>
     <div class="title">
         <div class="welcome">
             <div class="welcome-img"><img src="images/welcome.png" alt="welcome"></div>
