--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -1,12 +1,12 @@
 <!-- login.component.html -->
 <div class="container d-flex justify-content-center align-items-center min-vh-100 m-auto">
   <div class="gradient-border-wrapper">
-  <div class="row shadow-lg rounded-4 overflow-hidden">
+  <div class="row shadow-lg  overflow-hidden">
 
     <!-- Left side -->
     <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-white">
-      <img src="images/signup-img.png" alt="Login illustration" class="signup-img img-fluid"  />
-      <p class="text-img fw-bold">Log in to Batarev world and enjoy with us!</p>
+      <img src="images/login-img.png" alt="Login illustration" class="login-img img-fluid"  />
+      <p class="text-img ">Log in to Batarev world and enjoy with us!</p>
     </div>
 
     <!-- Right side (form) -->
@@ -36,7 +36,7 @@
             Login with Google
           </button>
           <button type="button" class="btn btn-outline-dark d-flex align-items-center gap-2">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" style="width: 24px; height: 24px;">
+            <i class="bi bi-apple" style="font-size: 24px;"></i>
             Login with Apple ID
           </button>
         </div>
