--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -1,7 +1,7 @@
 <!-- register.component.html -->
 <div class="container d-flex justify-content-center align-items-center min-vh-100 m-auto">
   <div class="gradient-border-wrapper">
-  <div class="row shadow-lg rounded-4 overflow-hidden">
+  <div class="row shadow-lg  overflow-hidden">
 
     <!-- Left side -->
     <div class="col-md-6 d-flex flex-column justify-content-center align-items-center text-white">
