--- a/src/app/components/pages/games/games.component.html
+++ b/src/app/components/pages/games/games.component.html
@@ -1,1 +1,14 @@
-<p>games works!</p>
+<div>
+  <h2>First Card Set</h2>
+  <app-cards [cards]="cardSet1"></app-cards>
+</div>
+
+<div>
+  <h2>Second Card Set</h2>
+  <app-cards [cards]="cardSet2"></app-cards>
+</div>
+
+<div>
+  <h2>New Game Coming Soon!</h2>
+  <p>Stay tuned for our next exciting puzzle adventure. Check back for updates and be the first to play!</p>
+</div>
