--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,52 @@
-<nav class="navbar navbar-expand-lg custom-navbar px-4 py-2">
+<nav class="navbar navbar-expand-lg custom-navbar px-5 py-2">
   <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="images\logo-patarif.png" alt="Logo" class="logo-img w-50" />
+      <img src="images/logo-patarif.png" alt="Logo" class="logo-img w-50" />
     </a>
 
     <!-- Navigation Links -->
     <div class="collapse navbar-collapse justify-content-center">
-      <ul class="navbar-nav gap-2">
-        <li class="nav-item"><a class="nav-link active rounded-pill" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Learning zone</a></li>
-        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Storytime</a></li>
-        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Playground</a></li>
-        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Shop</a></li>
-        <li class="nav-item"><a class="nav-link rounded-pill" href="#">Characters</a></li>
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/learning">Learning Zone</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/storytime">Storytime</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/games" href="games">Playground</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/shop">Shop</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link nav-link-animated" routerLink="/characters">Characters</a>
+        </li>
       </ul>
     </div>
 
     <!-- Right Side (Search + Avatar) -->
     <div class="d-flex align-items-center gap-3">
       <i class="bi bi-search fs-5"></i>
-      <img src="images/user-img.png" alt="User Avatar" class="avatar-img" />
+      <div class="dropdown">
+        <img src="images/user-img.png"
+             class="dropdown-toggle rounded-circle"
+             style="width:50px; height:50px; cursor:pointer;"
+             data-bs-toggle="dropdown"
+             aria-expanded="false"
+             alt="User" />
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><h6 class="dropdown-header">Account</h6></li>
+          <li><a class="dropdown-item" href="#">Profile</a></li>
+          <li><a class="dropdown-item" href="#">Settings</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="signup">Logout</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
