--- a/src/app/components/pages/games/games.component.html
+++ b/src/app/components/pages/games/games.component.html
@@ -1,43 +1,4 @@
-
-<!-- main background -->
-<div class="w-100 h-100" style="height: 100vh; z-index: 0; pointer-events: none;">
-  <!-- circles -->
-
-  <div class="circle " style="top: 18px; left: 2px; background-color: rgba(100, 134, 255, 1);">
-  </div>
-
-  <div class="circle" style="top: 540px; left: 140px; background-color: rgba(251, 86, 100, 1);">
-  </div>
-
-  <div class="circle" style="top: 205px; left: 564px; background-color: rgba(155, 87, 250, 1);">
-  </div>
-
-  <div class="circle" style="top: 450px; right: 0px; background-color: rgba(255, 0, 110, 1);">
-  </div>
-
-  <div class="circle" style="top: -138px; right: 60px; background-color: rgba(255, 238, 82, 1);">
-  </div>
-
-  <div class="circle" style="top: 920px; right: 560px; background-color: rgba(100, 134, 255, 1);">
-  </div>
-
-  <div class="circle" style="top: 1330px; left: 1004px; background-color: rgba(255, 238, 82, 1);">
-  </div>
-
-  <div class="circle" style="top: 1500px; left: 0; background-color: rgba(100, 134, 255, 1);">
-  </div>
-
-  <div class="circle" style="top: 1680px; left: 564px; background-color: rgba(155, 87, 250, 1);">
-  </div>
-
-  <div class="circle" style="top: 2015px; left: 140px; background-color: rgba(251, 86, 100, 1);">
-  </div>
-  <div class="games-carousel-container position-fixed top-0 start-0 w-100 h-100" style="inset:0;">
-  </div>
-  <!-- glassmorphism background above circles -->
-
-</div>
-
+<app-background></app-background>
 
 <div class="">
   <app-cards [cards]="cardSet1"></app-cards>
