--- a/src/app/components/background/background.component.css
+++ b/src/app/components/background/background.component.css
@@ -1,8 +1,8 @@
-.games-carousel-container{
+.home-container{
 
   z-index: -1;
   background-color: rgba(255, 255, 255, 0.301);
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(100px);
   width: 100%;
   height: 100%;
 }
@@ -10,10 +10,11 @@
 
 
 .circle {
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   top: 540px;
   z-index: -2;
   border-radius: 100%;
   position: absolute;
+  transition: all 2s;
 }
