--- a/src/app/components/cards/cards.component.css
+++ b/src/app/components/cards/cards.component.css
@@ -1,8 +1,9 @@
 .games-carousel-container {
   width: 100%;
   max-width: 900px;
-  margin: 40px auto 0;
+  margin: 1px auto 0;
   text-align: center;
+
 }
 
 
@@ -54,7 +55,7 @@
 
 .game-card {
   position: absolute;
-  width: 320px;
+  width: 100%;
   height: 180px;
   top: 20px;
   left: 50%;
@@ -62,7 +63,7 @@
   opacity: 0.5;
   z-index: 1;
   border-radius: 24px;
-  box-shadow: 0 8px 32px #0002;
+  /* box-shadow: 0 8px 32px #0002; */
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -78,7 +79,7 @@
   transform: translateX(-50%) scale(1) rotate(0deg);
   opacity: 1;
   z-index: 3;
-  box-shadow: 0 12px 36px #0003;
+  /* box-shadow: 0 12px 36px #0003; */
 }
 .game-card.left {
   transform: translateX(-120%) scale(0.85) rotate(-12deg);
@@ -104,7 +105,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* optional: ensures vertical centering if parent is taller */
 }
 .dots span {
   display: inline-block;
