--- a/src/app/components/pages/home/hero-section/hero-section.component.css
+++ b/src/app/components/pages/home/hero-section/hero-section.component.css
@@ -4,6 +4,8 @@ body {
 
 
 .hero {
+    min-width: 944px;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     margin-top: 30px;
@@ -177,7 +179,6 @@ body {
         transform: translate(20px, 20px) rotate(20deg);
     }
 }
-
 @keyframes collectionMoveUpDown {
     0% {
         transform: translate(20px, 20px);
@@ -204,4 +205,9 @@ body {
     100% {
         transform: translate(20px, 20px) rotate(-20deg);
     }
+}
+
+:host {
+    display: block;
+    overflow-x: auto;
 }
