--- a/src/app/components/pages/games/games.component.css
+++ b/src/app/components/pages/games/games.component.css
@@ -3,32 +3,15 @@ div {
 }
 
 
-/* Design for New Games */
-.new-games-container {
-  width: 100%;
-  max-width: 1100px;
-  margin: auto;
-}
-
-.new-games-list {
-  display: flex;
-  gap: 20px;
-  overflow-x: auto;
-  padding: 10px 0;
-}
-
-.new-game-card {
-  min-width: 200px;
-  height: 300px;
-  border-radius: 15px;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
+.games-container {
   padding: 20px;
-  font-weight: bold;
-  color: white;
-  font-size: 1.2rem;
-  background-blend-mode: overlay;
+  background-color: #f0f4f8;
+  text-align: center;
 }
+
+h1{
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 20px;
+}
+
