add category compnonent

--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -1,23 +1,35 @@
-<div class="hero">
-    <div class="paper-plane"><img src="images/paperPlane.png" alt="paper-plane"></div>
-    <div class="title">
-        <div class="welcome">
-            <div class="welcome-img"><img src="images/welcome.png" alt="welcome"></div>
-            <p class="welcome-message">Welcome to <span style="color: rgba(255, 0, 110, 1);">Patarif's</span> magical
-                universe</p>
+<div class="hero row align-items-center justify-content-center gap-0">
+    <!-- Left Side -->
+    <div class="col-12 col-md-8 d-flex flex-column">
+        <div class="welcome mb-3">
+            <div class="welcome-img mb-2">
+                <img src="images/welcome.png" alt="welcome">
+            </div>
+            <p class="welcome-message">
+                Welcome to <span style="color: rgba(255, 0, 110, 1);">Patarif's</span> magical universe
+            </p>
         </div>
-        <h1 class="hero-title ">
+        <h1 class="hero-title">
             <span class="line1">The Best place to</span><br>
-            <span class="line2"><span style="color: rgba(100, 134, 255, 1);">Learn</span> and <span style="color: rgba(251, 86, 100, 1);">play</span></span><br>
+            <span class="line2">
+                <span style="color: rgba(100, 134, 255, 1);">Learn</span> and
+                <span style="color: rgba(251, 86, 100, 1);">play</span>
+            </span><br>
             <span class="line3">for kids</span>
         </h1>
-        <div class="learn-line"><img src="images/learnLine.png" alt="learn line"></div>
-        <div class="play-line"><img src="images/playLine.png" alt="play line"></div>
     </div>
-    <div class="logo">
-        <img src="images/hero.png" alt="hero">
+    <!-- Right side -->
+    <div class="col-12 col-md-4 text-center text-md-end mt-4">
+        <img src="images/hero.png" alt="hero" class="img-fluid logo" />
     </div>
+
+
 </div>
+
+
+<div class="learn-line"><img src="images/learnLine.png" alt="learn line"></div>
+<div class="play-line"><img src="images/playLine.png" alt="play line"></div>
+<!-- <div class="paper-plane"><img src="images/paperPlane.png" alt=""></div> -->
 
 <div class="lets-play"><img src="images/letsPlay.png" alt="lets-play"></div>
 
