--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-background></app-background>
-<div style="position: relative; z-index: 10; padding-top: 80px; ">
+<div style="position: relative; z-index: 10;">
     <div class="animate__animated animate__fadeInDown">
         <app-hero-section></app-hero-section>
     </div>
