--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -6,4 +6,10 @@
     <br>
     <br>
     <app-introduction></app-introduction>
+    <br>
+    <br>
+    <app-categories></app-categories>
+    <br>
+    <br>
+    <app-home-games></app-home-games>
 </div>
