--- a/src/app/components/pages/home/hero-section/hero-section.component.html
+++ b/src/app/components/pages/home/hero-section/hero-section.component.html
@@ -1,3 +1,5 @@
+<!-- <app-background></app-background> -->
+
 <div class="hero row align-items-center justify-content-center gap-0">
     <!-- Left Side -->
     <div class="col-12 col-md-8 d-flex flex-column">
