--- a/src/app/components/pages/home/home-games/home-games.component.css
+++ b/src/app/components/pages/home/home-games/home-games.component.css
@@ -4,6 +4,19 @@
     font-weight: 700;
     color: #000;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 280px;
     text-align: center;
 }
+
+/* .paper-plane {
+    position: fixed;
+    top: -800px;
+    right: 0;
+    transform: rotate(-132.81deg);
+    z-index: -1;
+} */
+
+
+
+
+
