--- a/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
+++ b/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
@@ -89,6 +89,19 @@
   cursor: pointer;
 }
 
+.arrow.prev-arrow {
+  background: rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.arrow.prev-arrow i {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.arrow.prev-arrow:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
 .arrow i {
   font-size: 20px;
   color: #fff;
@@ -135,6 +148,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 64px;
 }
 
 /* ===== List Styles (for list mode, not carousel) ===== */
