--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,4 +1,6 @@
-<app-background></app-background>
+<div style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2; pointer-events: none;">
+  <app-background></app-background>
+</div>
 <div style="position: relative; z-index: 10;">
     <div class="animate__animated animate__fadeInDown">
         <app-hero-section></app-hero-section>
@@ -12,4 +14,7 @@
     <br>
     <br>
     <app-home-games></app-home-games>
+    <br>
+    <br>
+    <app-characters-home></app-characters-home>
 </div>
