--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -7,14 +7,28 @@
     </div>
     <br>
     <br>
-    <app-introduction></app-introduction>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-introduction></app-introduction>
+    </div>
     <br>
     <br>
-    <app-categories></app-categories>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-categories></app-categories>
+    </div>
     <br>
     <br>
-    <app-home-games></app-home-games>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-home-games></app-home-games>
+    </div>
     <br>
     <br>
-    <app-characters-home></app-characters-home>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-characters-home></app-characters-home>
+    </div>
+    <br>
+    <br>
+    <div class="component-animation" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+        <app-home-footer></app-home-footer>
+    </div>
 </div>
+<app-stars-background></app-stars-background>
