--- a/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
+++ b/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.css
@@ -83,7 +83,7 @@
   justify-content: center;
   border-radius: 60%;
   background: #000;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border: none;
   transition: background 0.2s;
   cursor: pointer;
@@ -101,7 +101,9 @@
 .arrow.prev-arrow:hover {
   background: rgba(255, 255, 255, 0.5);
 }
-
+body{
+  overflow: hidden;
+}
 .arrow i {
   font-size: 20px;
   color: #fff;
@@ -121,8 +123,8 @@
   align-items: center;
   background: #000;
   margin: 0 4px;
-  padding: 10px;
-  border-radius: 20px;
+  padding: 20px 10px;
+  border-radius: 40px;
 }
 
 .dots span {
