--- a/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.html
+++ b/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.html
@@ -1,16 +1,20 @@
 <div *ngIf="designType === 'carousel'" class="games-carousel-container">
+  
   <div class="carousel">
     <div class="cards">
+      <!-- <app-stars-background></app-stars-background>
+      <app-stars-background></app-stars-background>
+      <app-stars-background></app-stars-background> -->
       <div
-        *ngFor="let card of cards; let i = index"
-        class="game-card"
-        [ngClass]="{
-          'center': i === currentIndex,
-          'left': i === leftIndex,
-          'right': i === rightIndex
-        }"
+      *ngFor="let card of cards; let i = index"
+      class="game-card"
+      [ngClass]="{
+        'center': i === currentIndex,
+        'left': i === leftIndex,
+        'right': i === rightIndex
+      }"
         [style.textAlign]="'left'"
-      >
+        >
         <!-- Add the top-right icon only for the center card -->
         <ng-container *ngIf="i === currentIndex">
           <img 
